--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 	<h6></h6>
 	<p>Cisco Certified Network Associate - 2022 </p>--->
 							<h3>Oakton Community College</h3>
-							<h6>Skokie, 2020 - Present</h6>
+							<h6>Skokie, IL 2020 - Present</h6>
 							<p>Associates in Applied Science: Computer Programming</p>
 							<h3>George Washington High School</h3>
-							<h6>Cedar Rapids, 2012 - 2016</h6>
+							<h6>Cedar Rapids, IA 2012 - 2016</h6>
 							<!--<p>Band</br>Varisty</p>--->
 							</br></br>
 							<header class="major">
