--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							<h6>Sept 2021 - Present</h6>
 							<p>Manage clients' Active Directory, DC/File/Exchange servers, VOIP system. </p>
 							<p>Coordinate imaging, setting up, and deploying client computers, tools, and applications.</p>
-							<p>Dianose and resolve software, hardware, and network connectivity issues for users through ticketing software: ConnectWisr Manage & ServiceNow.</p>
+							<p>Diagnose and resolve software, hardware, and network connectivity issues for users through ticketing software: ConnectWisr Manage & ServiceNow.</p>
 							<h3>Security Coverage, IT Support Technician</h3>
 							<h6>Mar 2021 - Aug 2021</h6>
 							<p>Responsible for assisting internal Active Directory management.</p>
