--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					<p>These are all the little things that make me smile :D</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/cuttingwood.png" alt="" /></span>
+							<span class="image fit"><img src="images/cuttingwood.webp" alt="" /></span>
 							<h3>Carpentry</h3>
 							<p>I really enjoy upcycling discarded timber into something useful again. So far I've made a Composting Worm bin and an Aquaponic shelf.</p>
 							<!-- <ul class="actions special">
@@ -113,7 +113,7 @@
 							</ul> -->
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/Guitarkenny.png" alt="" /></span>
+							<span class="image fit"><img src="images/Guitarkenny.webp" alt="" /></span>
 							<h3>Music</h3>
 							<p>If the hair doesn't give it away, this photo should 'shred' any doubt. When I'm not working on computers or building furniture, I channel my energy into playing/creating music.</p>
 							<!-- <ul class="actions special">
