--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					<p>These are all the little things that make me smile :D</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/cuttingwood.webp" alt="" /></span>
+							<span class="image fit"><img src="images/Cuttingwood.webp" alt="" /></span>
 							<h3>Carpentry</h3>
 							<p>I really enjoy upcycling discarded timber into something useful again. So far I've made a Composting Worm bin and an Aquaponic shelf.</p>
 							<!-- <ul class="actions special">
