--- a/index.html
+++ b/index.html
@@ -79,17 +79,19 @@
 							<h3>Ascend Technologies, IT Operations Analyst</h3>
 							<h6>Sept 2021 - Present</h6>
 							<p>Manage clients' Active Directory, DC/File/Exchange servers, VOIP system. </p>
+							<p>Configure and troubleshoot VPN connections, automated email processes, and Active Directory sychronization.</p>
 							<p>Coordinate imaging, setting up, and deploying client computers, tools, and applications.</p>
-							<p>Diagnose and resolve software, hardware, and network connectivity issues for users through ticketing software: ConnectWisr Manage & ServiceNow.</p>
-							<h3>Security Coverage, IT Support Technician</h3>
+							<p>Diagnose and resolve software, hardware, and network connectivity issues for users through ConnectWise Manage & ServiceNow.</p>
+							<h3>Security Coverage, IT Support Technician Level 2</h3>
 							<h6>Mar 2021 - Aug 2021</h6>
 							<p>Responsible for assisting internal Active Directory management.</p>
 							<p>Provided remote printer setup, network troubleshooting, and internal IT support.</p>
-							<p>Handled escalated and triaged tickets for ISP and product support center.</p>
+							<p>Provided Help Desk-based IT support including desktop troubleshooting, malware removal, internet support, and product application support.</p>
+							<p>Created product supportt service tickets and used web-based ticketing systems to track and deliver support solutions.</p>
 							<h3>Eastern Accents, IT Support Specialist</h3>
 							<h6>Sept 2020 - Feb 2021</h6>
-							<p>Planned, organized, and executed technical support on factory floor to company office spaces.</p>
-							<p>Responsible for building office spaces; etherent cables/wall ports, servers, and workstations.</p>
+							<p>Planned, organized, and executed technical support on factory floor, office spaces, and photo studio.</p>
+							<p>Responsible for building office spaces; etherent cabling/wall ports, server configuration, and workstations.</p>
 							<p>Co-lead initiative for replacing desktop workstations with thin clients throughout factory floor, photo studio, and offices.</p>
 						</div>
 					</div>
