--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<h2>Projects</h2>
 							</header>
 							<h3>Homelab</h3>
-							<p>Configured home network firewall - SonicWall TZ300</br>Ubuntu Server (Linux) - Dell PowerEdge R630 </br>- Static Webpage Hosting - (Github)</br>- SSL VPN Host - SonicWall NetExtender</br>Ad blocking on network - Pihole on Rasberry Pi</p>
+							<p>Configured home network firewall - SonicWall TZ300</br>- SSL VPN Host - SonicWall NetExtender</br>- Static Webpage Hosting - (Github)</br>Ad blocking on network - Pihole on Rasberry Pi</p>
 							<p></p>
 						</div>
 						<div class="col-6 col-12-medium">
