--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<h2>Projects</h2>
 							</header>
 							<h3>Homelab</h3>
-							<p>Configured home network firewall - SonicWall TZ300</br>- SSL VPN Host - SonicWall NetExtender</br>- Static Webpage Hosting - (Github)</br>Ad blocking on network - Pihole on Rasberry Pi</p>
+							<p>Configured home network firewall - SonicWall TZ300</br>SSL VPN Host - SonicWall NetExtender</br>Static Webpage Hosting - (Github)</br>Ad blocking on network - Pihole on Rasberry Pi</p>
 							<p></p>
 						</div>
 						<div class="col-6 col-12-medium">
@@ -123,7 +123,7 @@
 							</ul> -->
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/networkingvector.webp" alt="" /></span>
+							<span class="image fit"><img src="images/networkingKenny.webp" alt="" /></span>
 							<h3>Information Technology</h3>
 							<p>My exposure to business networks inspired me to create my own setup. </p>
 							<!-- <ul class="actions special">
