--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 							<h3>Security Coverage, IT Support Technician Level 2</h3>
 							<h6>Mar 2021 - Aug 2021</h6>
 							<p>Troubleshooted Enterprise SaaS, Microsoft Office Suite, and printers.</p>
-							<p>Responsible for assisting internal Active Directory management.</p>
+							<p>Worked with internal Active Directory.</p>
 							<p>Provided remote printer setup, network troubleshooting, and internal IT support.</p>
-							<p>Provided Help Desk-based IT support including desktop troubleshooting, malware removal, internet support, and product application support.</p>
+							<p>Provided Help Desk-based IT support including desktop troubleshooting, malware removal, and internet support.</p>
 							
 							<h3>Eastern Accents, IT Support Specialist</h3>
 							<h6>Sept 2020 - Feb 2021</h6>
