--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							<p>Troubleshooted Enterprise SaaS, Microsoft Office Suite, and printers.</p>
 							<p>Worked with internal Active Directory.</p>
 							<p>Provided remote printer setup, network troubleshooting, and internal IT support.</p>
-							<p>Provided Help Desk-based IT support including desktop troubleshooting, malware removal, and internet support.</p>
+							<p>Provided IT support including desktop troubleshooting, malware removal, and internet support.</p>
 							
 							<h3>Eastern Accents, IT Support Specialist</h3>
 							<h6>Sept 2020 - Feb 2021</h6>
