--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<h2>Projects</h2>
 							</header>
 							<h3>Homelab</h3>
-							<p>Configured home network firewall </br>Static Webpage Hosting</br>Ad blocking on network - Pihole on Rasberry Pi</br>Personal financial database using MySQL & Python</p>
+							<p>Configured home network firewall </br></br>Static Webpage Hosting</br></br>Ad blocking on network - Pihole on Rasberry Pi</br></br>Personal financial database using MySQL & Python</p>
 							
 						</div>
 						<div class="col-6 col-12-medium">
