--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 							<p>Associates in Applied Science: Computer Programming</p>
 							<h3>George Washington High School</h3>
 							<h6>Cedar Rapids, IA 2012 - 2016</h6>
+							<p>High School Diploma</p>
 							<!--<p>Band</br>Varisty</p>--->
 							</br></br>
 							<header class="major">
